got victory alerts

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman Fishin'</title>
-    <script type="text/javascript" src="assets/javascript/game.js">
 
-    </script>
   </head>
   <body>
     <h1>What Fish ya got?</h1>
 
       <h2>Guess the fish!</h2>
 
-      <div id="answerSpaces"></div>
+      <h1 id="answerSpaces">_ _ _</h1>
 
       <div id="guessesLeft"></div>
+
+      <button type="button" name="button" id="newGameButton">New game!</button>
+
+      <script type="text/javascript" src="assets/javascript/game.js"></script>
 
   </body>
 </html>
