working except reset button

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 
       <h2>Guess the fish!</h2>
 
+      <h3>Enter your guess: </h3><input type="text" name="" value="" id="guessInput"></input> <button id="guessButton">Guess!</button>
+
 
       <h1 id="answerSpaces"></h1>
 
 
-      <h1 id="answerSpaces">_Merge Test</h1>
+      <p>You have <span id="guessesLeft"></span> guesses left.</p>
 
+      <p><span id="guessedAlready"></span>
 
-      <div id="guessesLeft"></div>
+      </div>
+
+      <h3><span id="userMsg"></span></h3>
 
       <button type="button" name="button" id="newGameButton">New game!</button>
 
