--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman Fishin'</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 
   </head>
   <body>
-    <h1>What Fish ya got?</h1>
+    <h1 id="title">What Fish ya got?</h1>
+
+    <div class="game-main">
 
       <h2>Guess the fish!</h2>
 
-      <h3>Enter your guess: </h3><input type="text" name="" value="" id="guessInput"></input> <button id="guessButton">Guess!</button>
+       <h3>Type your guess!</h3>
+       <h4>Hit enter for a new game!</h4>
+
+      <!-- <input type="text" name="" value="" id="guessInput"></input> <button id="guessButton">Guess!</button>  -->
 
 
       <h1 id="answerSpaces"></h1>
@@ -20,11 +26,13 @@
 
       <p><span id="guessedAlready"></span>
 
-      </div>
 
-      <h3><span id="userMsg"></span></h3>
+
+      <h3><span id="userMsg">Good Luck!</span></h3>
 
       <button type="button" name="button" id="newGameButton">New game!</button>
+
+    </div>
 
       <script type="text/javascript" src="assets/javascript/game.js"></script>
 
