i dont know anymore

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
   </head>
   <body>
-    <h1 id="title">What Fish ya got?</h1>
+    <h1 id="title">Reel him in!</h1>
 
     <div class="game-main">
+
+
 
       <h2>Guess the fish!</h2>
 
@@ -25,15 +27,19 @@
       <p>You have <span id="guessesLeft"></span> guesses left.</p>
 
       <p><span id="guessedAlready"></span>
+      </div>
 
 
+      <img src="assets/images/fishermanpng.png" id="fisherman" alt="">
 
+      <div class="scoreCount">
       <h3><span id="userMsg">Good Luck!</span></h3>
 
       <button type="button" name="button" id="newGameButton">New game!</button>
 
-    </div>
 
+    <p>Wins: <span id="wins">0</span>   ---   Losses: <span id="losses">0</span></p>
+        </div>
       <script type="text/javascript" src="assets/javascript/game.js"></script>
 
   </body>
