--- a/index.html
+++ b/index.html
@@ -7,26 +7,34 @@
 
   </head>
   <body>
+
+    <!-- <div id="startScreen">
+        <h1>Press any key to start fishin'</h1>
+    </div> -->
+    <div class="container">
+
+
     <h1 id="title">Reel him in!</h1>
 
     <div class="game-main">
 
 
 
-      <h2>Guess the fish!</h2>
+      <!-- <h2>Guess the fish!</h2> -->
 
-       <h3>Type your guess!</h3>
-       <h4>Hit enter for a new game!</h4>
+       <h3>Try to spell the name of the fish you've got on the line. Type your guesses in the space below to try to reel in your catch.</h3>
+
 
       <!-- <input type="text" name="" value="" id="guessInput"></input> <button id="guessButton">Guess!</button>  -->
 
-
       <h1 id="answerSpaces"></h1>
+
+      <input type="text" name="" value="" id="guessInput" onchange="guessCheck()"></input>
 
 
       <p>You have <span id="guessesLeft"></span> guesses left.</p>
 
-      <p><span id="guessedAlready"></span>
+      <p>Already Guessed: <span id="guessedAlready">  </span>
       </div>
 
 
@@ -41,6 +49,8 @@
     <p>Wins: <span id="wins">0</span>   ---   Losses: <span id="losses">0</span></p>
         </div>
       <script type="text/javascript" src="assets/javascript/game.js"></script>
+
+          </div>
 
   </body>
 </html>
