detects guess on key up

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- <input type="text" name="" value="" id="guessInput"></input> <button id="guessButton">Guess!</button>  -->
          <h1 id="answerSpaces"></h1>
 
-         <input type="text" name="" value="" id="guessInput" onchange="guessCheck()"></input>
+         <!-- <input type="text" name="" value="" id="guessInput" onchange="guessCheck()"></input> -->
       </div>
 
 <!-- Guesses and previously guessed Letters -->
